--- a/onspring-franchise-app/android/app/src/main/res/values/strings.xml
+++ b/onspring-franchise-app/android/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-  <string name="app_name">franchise_app</string>
+  <string name="app_name">새싹식권_가맹점</string>
   <string name="expo_splash_screen_resize_mode" translatable="false">contain</string>
   <string name="expo_splash_screen_status_bar_translucent" translatable="false">false</string>
 </resources>
